<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    tools:context=".ActivityTarot">


    <Button
        android:id="@+id/Get_prediction"
        android:layout_width="302dp"
        android:layout_height="253dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="339dp"
        android:onClick="onClick"
        android:text="@string/Get_prediction"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/textViewTarot"
        android:layout_width="354dp"
        android:layout_height="174dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="412dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="19dp"
        android:text="@string/prediction"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_back2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="307dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="631dp"
        android:onClick="onClick"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_tarot_cards"
        android:layout_width="270dp"
        android:layout_height="107dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="419dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="205dp"
        android:onClick="onClick"
        android:text="Перейти к предсказанию"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>